Added  bullet point

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h4></h4>
         <ul>
             <li>
-                <p></p>
+                <p>lalala</p>
             </li>
             <li></li>
             <li></li>
