--- a/index.html
+++ b/index.html
@@ -1,25 +1,23 @@
 <html></html>
     <head>
-        <title> </title>
+        <title>CraftyCarli's</title>
     </head>
     <body>
-        <h1></h1>
-        <h2></h2>
-        <h3></h3>
-        <h4></h4>
+        <h1>Cow Heads</h1>
+        <h2>Earrings</h2>
+        <h3>Stitch and Angel</h3>
+        <h4>Flowers</h4>
         <ul>
-            <li>
-                <p>lalala</p>
-            </li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Prices</li>
+            <li>Details</li>
+            <li>Quality</li>
+            <li>Material</li>
+            <li>Beads</li>
+            <li>Earrings</li>
+            <li>Small Beads</li>
+            <li>Large Beads</li>
+            <li>Cases</li>
+            <li>Keychains</li>
         </ul>
     </body>
 </html>
